crates/nirvash-macros/tests/fixtures/registered_property_closure_reject.stderr
error: registered properties must be built from AST-native nirvash_expr!/nirvash_step_expr! nodes
  --> tests/fixtures/registered_property_closure_reject.rs:41:52
   |
41 |   fn bad_property() -> ::nirvash::Ltl<State, Action> {
   |  ____________________________________________________^
42 | |     ::nirvash::Ltl::pred(::nirvash::BoolExpr::new("bad_property", |_| true))
43 | | }
   | |_^
